5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_825.log
== TEST (2019-03-27 00:51:03) 
-- CODE:
r = float(input("raio")
from math import *
ang = 180
print(sin(ang))
print(sin(radians(ang)))
-- ERROR:
File "XXXX", line 2
    from math import *
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:52:33) 
-- CODE:
r = float(input("raio")
from<math>import *
ang = 180
print(sin(ang))
print(sin(radians(ang)))
-- ERROR:
File "XXXX", line 2
    from<math>import *
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:29:54) 
-- CODE:
inport math
raio_esfera = float(input("numero"))
area_circulo = 
-- ERROR:
File "XXXX", line 1
    inport math
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:30:34) 
-- CODE:
import math
raio_esfera = float(input("numero"))
area_circulo = 
-- ERROR:
File "XXXX", line 3
    area_circulo = 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:30:58) 
-- CODE:
import math
raio_esfera = float(input("numero"))
area_esfera = 
-- ERROR:
File "XXXX", line 3
    area_esfera = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:32:31) 
-- CODE:
import math
raio = float(input("numero"))
area_circuclo = math.pi * raio**2
-- ERROR:
File "XXXX", line 3
    area_esfera = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:34:34) 
-- CODE:
import math
raio = float(input("numero"))
area_circuclo = math.pi * raio**2
volume_esfera = (math.pi * raio**3) * 4/3
-- ERROR:
File "XXXX", line 3
    area_esfera = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:34:52) 
-- CODE:
import math
raio = float(input("numero"))
area_circuclo = math.pi * raio**2
volume_esfera = (math.pi * raio**3) * 4/3
-- ERROR:
File "XXXX", line 3
    area_esfera = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:35:15) 
-- CODE:
import math
raio = float(input("numero"))
area_circuclo = math.pi * raio**2
volume_esfera = (math.pi * raio**3) * 4/3
-- ERROR:
File "XXXX", line 3
    area_esfera = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:37:33) 
-- CODE:
import math
raio = float(input("numero"))
area_circuclo = math.pi * raio**2
volume_esfera = (math.pi * raio**3) * 4/3
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(area_circulo, 3))
NameError: name 'area_circulo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:38:28) 
-- CODE:
import math
raio = float(input("numero"))
area_circulo = math.pi * raio**2
volume_esfera = (math.pi * raio**3) * 4/3
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:38:46) 
-- CODE:
import math
raio = float(input("numero"))
area_circulo = math.pi * raio**2
volume_esfera = (math.pi * raio**3) * 4/3
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME:
0.167283
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
